[appSwitcher] fix alignment of the app cards

--- a/src/plugins/appSwitcher/public/appSwitcher.less
+++ b/src/plugins/appSwitcher/public/appSwitcher.less
@@ -11,6 +11,8 @@
 
   .app-link {
     display: inline-block;
+    vertical-align: top;
+    text-align: left;
     background: white;
     width: 200px;
     margin: 0 30px 30px 0;
@@ -35,7 +37,6 @@
     .app-description {
       font-size: 1em;
       color: @gray;
-      text-align: left;
       margin: 0;
     }
   }
